# JSONtoPDF-DOC

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Readme.txt  config.py  main.py  pyproject.toml  render.yaml  schemas.py
assets/: payload.json  text.json
json_image_doc_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
renderers/: docx_renderer.py  html_renderer.py  pdf_renderer.py
routes/: render.py
services/: render_service.py
utils/: images.py  sanitize.py
